feat(qa): refactor instance migration test suite
 * remove rolling upgrades modules and tests
 * extract util classes as new qa module

 related to #CAM-6615

--- a/qa/pom.xml
+++ b/qa/pom.xml
@@ -143,6 +143,7 @@
     <profile>
       <id>instance-migration</id>
       <modules>
+        <module>test-db-util</module>
         <module>test-db-instance-migration</module>
       </modules>
     </profile>
