--- a/qa/test-db-util/pom.xml
+++ b/qa/test-db-util/pom.xml
@@ -2,15 +2,16 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.camunda.bpm.qa.upgrade</groupId>
-    <artifactId>camunda-qa-db-instance-migration</artifactId>
+    <groupId>org.camunda.bpm.qa</groupId>
+    <artifactId>camunda-qa</artifactId>
     <version>7.6.0-SNAPSHOT</version>
   </parent>
 
+  <groupId>org.camunda.bpm.qa.upgrade</groupId>
   <artifactId>camunda-qa-upgrade-scenario-util</artifactId>
   <packaging>jar</packaging>
-  <name>camunda BPM - QA - upgrade - instance migration - scenario util</name>
-
+  <name>camunda BPM - QA - upgrade - scenario util</name>
+ 
   <dependencyManagement>
     <dependencies>
       <dependency>
